[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Controller-Common"
version = "1.0.0"
dependencies = {file = ["requirements.txt"]}
authors = [
  {name = "Alec Lozano", email = "nunya@gmail.com"},
]
maintainers = [
  {name = "ECU ATMAE Robotics"}
]
description = "Easily interface with XboxController"
readme = "README.md"
license = { text = "GPL-3.0" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/me/spam.git"
