[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "controller_common"
version = "0.1.0"
authors = [
  {name = "Alec Lozano", email = "nunya@gmail.com"}
]
maintainers = [
  {name = "ECU ATMAE Robotics"}
]
description = "Easily interface with XboxController"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "pygame==2.6.1"
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/ECU-ATMAE-ROBOTICS/ControllerCommon.git"
